--- a/review/templates/header.html
+++ b/review/templates/header.html
@@ -7,7 +7,7 @@
       <nav id="nav-menu-container">
           <ul class="nav-menu">
               <li><a href=""><img style="height:1.4em;" src="" alt=""> Home</a></li>
-              <li><a href=""><img style="height:1.4em;" src="{% static 'icons/book.png' %}" alt=""> Books</a></li>
+              <li><a href="{% url 'books' %}"><img style="height:1.4em;" src="{% static 'icons/book.png' %}" alt=""> Books</a></li>
               <li><a href=""><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Request</a></li>
               <li><a href=""><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Select Languae</a></li>
 
