Auth User - signup, signup

--- a/review/templates/header.html
+++ b/review/templates/header.html
@@ -9,6 +9,8 @@
               <li><a href=""><img style="height:1.4em;" src="" alt=""> Home</a></li>
               <li><a href=""><img style="height:1.4em;" src="{% static 'icons/book.png' %}" alt=""> Books</a></li>
               <li><a href=""><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Request</a></li>
+              <li><a href=""><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Select Languae</a></li>
+
               {% if user.is_authenticated %}
               <li class="menu-has-children"><a href=""><img style="height:1.4em;" src="{% static 'icons/profile.png' %}" alt=""> User Name</a>
                   <ul>
