--- a/review/templates/base_generic.html
+++ b/review/templates/base_generic.html
@@ -13,14 +13,48 @@
         <meta charset="UTF-8">
         <title>Book Library</title>
         {% load static %}
-        {% block css %}{% endblock %}
+        {% block css %}
+        <!-- Favicon-->
+        <link rel="shortcut icon" href="{% static 'img/fav.png' %}">
+        <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+        <!--CSS============================================= -->
+        <link rel="stylesheet" href="{% static 'css/linearicons.css' %}">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+        <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
+        <link rel="stylesheet" href="{% static 'css/nice-select.css' %}">
+        <link rel="stylesheet" href="{% static 'css/animate.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/owl.carousel.css' %}">
+        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        {% endblock %}
     </head>
     <body>
         <header id="header">
             {% include "header.html" %}
         </header>
         <!-- start banner Area -->
-        {% block banner %}{% endblock %}
+        {% block banner %}
+            {% load i18n %}
+            <section class="banner-area" style="height: 800px">
+                <div class="container">
+                    <div class="row fullscreen d-flex align-items-center justify-content-start">
+                        <div class="banner-content col-lg-7">
+                            <h5 class="text-white text-uppercase">{% trans 'Author: HN-SUN*-2020' %}</h5>
+                            <h1 class="text-uppercase">
+                                <!-- {% trans 'New Adventure' %} -->
+                            </h1>
+                            <p class="text-white pt-20 pb-20">
+                                <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp <br> or incididunt ut labore et dolore magna aliqua. Ut enim ad minim. -->
+                            </p>
+                            <a href="#" class="primary-btn text-uppercase">{% trans 'Review now' %}</a>
+                        </div>
+                        <div class="col-lg-5 banner-right">
+                            <img class="img-fluid" src="{%static 'img/header-img.png' %}" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+        {% endblock %}
         <main role="main" class="container pageContent pt-50 pb-50">
             <div class="row">
                 {% block content %}{% endblock %}
@@ -29,6 +63,24 @@
         <footer class="footer-area section-gap">
             {% include "footer.html" %}
         </footer>
-        {% block js %}{% endblock %}
+        {% block js %}
+        <script src="{% static 'js/vendor/jquery-2.2.4.min.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhOdIF3Y9382fqJYt5I_sswSrEw5eihAA"></script>
+        <script src="{% static 'js/easing.min.js' %}"></script>
+        <script src="{% static 'js/hoverIntent.js' %}"></script>
+        <script src="{% static 'js/superfish.min.js' %}"></script>
+        <script src="{% static 'js/jquery.ajaxchimp.min.js' %}"></script>
+        <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
+        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+        <script src="{% static 'js/jquery.sticky.js' %}"></script>
+        <script src="{% static 'js/jquery.nice-select.min.js' %}"></script>
+        <script src="{% static 'js/parallax.min.js' %}"></script>
+        <script src="{% static 'js/waypoints.min.js' %}"></script>
+        <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
+        <script src="{% static 'js/mail-script.js' %}"></script>
+        <script src="{% static 'js/main.js' %}"></script>
+        {% endblock %}
     </body>
 </html>
