--- a/review/templates/index.html
+++ b/review/templates/index.html
@@ -3,27 +3,9 @@
 {% load i18n %}
 
 {% block banner %}
-    <section class="banner-area" style="height: 800px">
-        <div class="container">
-            <div class="row fullscreen d-flex align-items-center justify-content-start">
-                <div class="banner-content col-lg-7">
-                    <h5 class="text-white text-uppercase">Author: Travor James</h5>
-                    <h1 class="text-uppercase">
-                        New Adventure
-                    </h1>
-                    <p class="text-white pt-20 pb-20">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp <br> or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-                    </p>
-                    <a href="#" class="primary-btn text-uppercase">Review now</a>
-                </div>
-                <div class="col-lg-5 banner-right">
-                    <img class="img-fluid" src="{%static 'img/header-img.png' %}" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
 {% endblock %}
 {% block content %}
+<div class="row pt-70">
     <p>Welcome to Book Review Website! This is block content.</p>
+</div>
 {% endblock %}
-
