--- a/review/templates/base_generic.html
+++ b/review/templates/base_generic.html
@@ -55,10 +55,8 @@
                 </div>
             </section>
         {% endblock %}
-        <main role="main" class="container pageContent pt-50 pb-50">
-            <div class="row">
-                {% block content %}{% endblock %}
-            </div>
+        <main role="main" class="container pageContent pt-50 pb-50" style="min-height: 70vh;">
+            {% block content %}{% endblock %}
         </main>
         <footer class="footer-area section-gap">
             {% include "footer.html" %}
