--- a/review/templates/header.html
+++ b/review/templates/header.html
@@ -2,26 +2,27 @@
 <div class="container">
     <div class="row align-items-center justify-content-between d-flex">
       <div id="logo">
-        <a href=""><img src="{% static 'icons/regal.png' %}" alt="" title="" /></a>
+        <a href="{% url 'index' %}"><img src="{% static 'icons/regal.png' %}" alt="" title="" /></a>
       </div>
       <nav id="nav-menu-container">
           <ul class="nav-menu">
               <li><a href=""><img style="height:1.4em;" src="" alt=""> Home</a></li>
               <li><a href="{% url 'books' %}"><img style="height:1.4em;" src="{% static 'icons/book.png' %}" alt=""> Books</a></li>
               <li><a href=""><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Request</a></li>
-              <li><a href=""><img style="height:1.4em;" src="{% static 'icons/message.png' %}" alt=""> Select Languae</a></li>
+              <li><a href=""> Language</a></li>
 
               {% if user.is_authenticated %}
-              <li class="menu-has-children"><a href=""><img style="height:1.4em;" src="{% static 'icons/profile.png' %}" alt=""> User Name</a>
+              <li class="menu-has-children"><a href=""><img style="height:1.4em;" src="{% static 'icons/profile.png' %}" alt="">
+                  {{ user.username }}</a>
                   <ul>
-                      <li><a href="">My page</a></li>
+                      <li><a href="{% url 'UserProfile' %}">My page</a></li>
                       <li><a href="">My Books</a></li>
                   </ul>
               </li>
-              <li><a href=""><img style="height:1.4em;" src="{% static 'icons/logout.png' %}" alt=""> Logout</a></li>
+              <li><a href="{% url 'logout' %}"><img style="height:1.4em;" src="{% static 'icons/logout.png' %}" alt=""> Logout</a></li>
               {% else %}
-              <li><a href=""><img style="height:1.4em;" src="{% static 'icons/login.png' %}" alt=""> Login</a></li>
-              <li><a href=""><img style="height:1.4em;" src="{% static 'icons/register.png' %}" alt=""> Register</a></li>
+              <li><a href="{% url 'login' %}"><img style="height:1.4em;" src="{% static 'icons/login.png' %}" alt=""> Login</a></li>
+              <li><a href="{% url 'signup' %}"><img style="height:1.4em;" src="{% static 'icons/register.png' %}" alt=""> Register</a></li>
               {% endif %}
           </ul>
       </nav>
