--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -1,37 +1,19 @@
 {% extends "base_generic.html" %}
-{% load static %}
-
-{% block banner %}
-    <section class="banner-area" style="height: 800px">
-        <div class="container">
-            <div class="row fullscreen d-flex align-items-center justify-content-start">
-                <div class="banner-content col-lg-7">
-                    <h5 class="text-white text-uppercase">Author: Travor James</h5>
-                    <h1 class="text-uppercase">
-                        New Adventure
-                    </h1>
-                    <p class="text-white pt-20 pb-20">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp <br> or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
-                    </p>
-                    <a href="#" class="primary-btn text-uppercase">Review now</a>
-                </div>
-                <div class="col-lg-5 banner-right">
-                    <img class="img-fluid" src="{%static 'img/header-img.png' %}" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-{% endblock %}
-
+{% block banner %}{% endblock %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 {% block content %}
-    <form method="post" class="formsWidth">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-success">Login</button>
-    </form>
-    {% load i18n %}
-    {% trans 'Create new user account:' %}  <a href="{% url 'signup' %}">Register here</a> <br>
-    {% trans 'Forgot your password?' %}  <a href="{% url 'password_reset' %}">Reset password</a>
-{% endblock content %}
-
+    <div class="row pt-70">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h3 class="text-center">{% trans 'Login' %}</h3>
+            <form method="post" class="formsWidth">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button type="submit" class="btn btn-success">Login</button>
+            </form>
+            {% trans 'Create new user account:' %}  <a href="{% url 'signup' %}">Register here</a> <br>
+            {% trans 'Forgot your password?' %}  <a href="{% url 'password_reset' %}">Reset password</a>
+        </div>
+    </div>
+{% endblock %}
