--- a/users/templates/registration/signup.html
+++ b/users/templates/registration/signup.html
@@ -1,14 +1,18 @@
 {% extends "base_generic.html" %}
-{% load static %}
+{% block banner %}{% endblock %}
 {% load i18n %}
-
 {% load crispy_forms_tags %}
 {% block content %}
-<h3>{% trans 'Create new account' %}</h3>
-<form method="post" class="formsWidth">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success">{% trans 'Register' %}</button>
-</form>
-{% trans 'Do you have a account' %} ? <a href="{% url 'login' %}">{% trans 'Click here to Login' %}</a>
-{% endblock content %}
+    <div class="row pt-70">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <h3 class="text-center">{% trans 'Create new account' %}</h3>
+            <form method="post" class="formsWidth">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button type="submit" class="btn btn-success">{% trans 'Register' %}</button>
+            </form>
+            {% trans 'Do you have a account' %} ? <a href="{% url 'login' %}">{% trans 'Click here to Login' %}</a>
+        </div>
+    </div>
+{% endblock %}
