--- a/users/templates/users/user_form.html
+++ b/users/templates/users/user_form.html
@@ -1,10 +1,35 @@
+{% extends "base_generic.html" %}
+{% block banner %}{% endblock %}
 {% load crispy_forms_tags %}
 {% block content %}
-<h3>Update your account</h3>
-<form method="post" class="formsWidth" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Update</button>
-</form>
-<a href="{% url 'UserProfile' %}"><button class="btn btn-warning profile_buttons">Return</button></a>
-{% endblock content %}
+<div class="row pt-70">
+    <div class="col-md-3">
+        <div class="username text-center">
+            <img style="margin-bottom:15px;" src="{{ user.profile.image.url }}" alt="User Photo">
+            <h4>
+                <strong>{{ user.username }}</strong>
+            </h4>
+            <br>
+            <div>
+                <a href="{% url 'UserUpdate' %}"><button class="btn btn-success">Edit Profile</button></a>
+                <a href="{% url 'ProfileUpdate' %}"><button class="btn btn-success">Edit Avatar</button></a>
+            </div>
+            <br>
+            <div>
+                <p><strong>Join date</strong> <br>{{ user.date_joined|date:"F j, Y" }}</p>
+                <p><strong>Last login date </strong><br>{{ user.last_login|date:"F j, Y" }}</p>
+                <p><strong>Email </strong><br>{{ user.email }}</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-6">
+        <h3 style="text-align: center;">Edit profile</h3>
+        <form method="post" enctype="multipart/form-data" class="formsWidth">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-success">Update</button>
+        </form>
+    </div>
+</div>
+{% endblock %}
