--- a/review/templates/base_generic.html
+++ b/review/templates/base_generic.html
@@ -88,6 +88,7 @@
         <script src="{% static 'js/jquery.counterup.min.js' %}"></script>
         <script src="{% static 'js/mail-script.js' %}"></script>
         <script src="{% static 'js/main.js' %}"></script>
+        <script src="{% static 'js/my_js.js' %}"></script>
         {% endblock %}
     </body>
 </html>
